--- a/stye.css
+++ b/stye.css
@@ -1,5 +1,5 @@
 body {
-overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 #navbar {
@@ -31,11 +31,11 @@ overflow-x: hidden;
 }
 
 .button {
-background: rgb(0, 0, 255, 0.5);
-color: white;
-padding: 6px 12px;
-border-radius: 20px;
-border: none;
+    background: rgb(0, 0, 255, 0.5);
+    color: white;
+    padding: 6px 12px;
+    border-radius: 20px;
+    border: none;
 }
 
 .about-section {
@@ -48,6 +48,121 @@ border: none;
 
 #about-section-text {
     margin-left: 40px;
-    background-color: red;
+    background-color:coral;
     padding: 10px;
+}
+
+body {
+    margin: 0px;
+    padding: 0px;
+    background-color: ivory;
+    font-family: calibrri;
+
+}
+
+a {
+    text-decoration: none;
+}
+
+.services {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+}
+
+.s heading {
+    text-align: center;
+    color: #ffffff;
+}
+
+.s heading h1 {
+    color: purple;
+    font-size: 3rem;
+    font-weight: 400;
+    letter-spacing: 1px;
+    margin: 0px;
+    color: #ffffff;
+
+
+}
+
+.s_box_container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: top;
+}
+
+.s-box {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border-radius: 10px;
+    width: 200px;
+    height: 400px;
+    padding: 20px 25px;
+    box-sizing: border-box;
+    margin: 30px;
+
+}
+
+.s-box h1 {
+    color: #576975;
+    letter-spacing: 1px;
+    font-size: 1.5rem;
+    margin-bottom: 8px;
+    text-align: center;
+
+}
+
+.s-box img {
+    height: 100px;
+
+
+}
+
+.s-box p {
+    color: rgba(255, 255, 255, 0.9);
+    text-align: center;
+}
+
+.s-btn {
+    width: 140px;
+    height: 40px;
+    border-radius: 20px;
+    border: 1px solid rgba(74 144 226 0.5);
+    display: flex;
+    justify-content: center;
+    color: #ffffff;
+    background-color: #576975;
+    align-items: center;
+
+}
+
+.s-box:hover {
+    box-shadow: 2px 2px 30px rgba(0, 0, 0, 0, 0.8);
+    transition: all ease 0.35;
+
+}
+
+.s-btn:hover {
+    background-color: #4a90e2;
+    border: 1px solid #4a90e2;
+    color: #ffffff;
+    transition: all ease 0.35
+}
+
+.bar {
+    width: 100px;
+    height: 6px;
+    position: absolute;
+    left: 50%;
+    top: 0px;
+    transform: translateX(-50%);
+    background-color: #4a90e2;
+    border-radius: 0px 0px 10px 10px;
 }
